--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,11 +31,11 @@
             <main class="grid lg:col-span-10 bg-gray-300 p-4">
                 <div>       
                     <h2 class="font-bold text-lg p-2 m-3">
-                        <span>At a time you will see 30 results</span>
+                        <span>At a time you will see max 60 results</span>
                     </h2>
                     <!-- cards  -->
                     <div class="grid lg:grid-cols-3 sm:grid-cols-2">
-                        <%#-include("cardElem.ejs") %>
+                        <%-include("cardElem.ejs") %>
                     </div>
                     <!-- cards end -->
                 </div>
