--- a/views/cardElem.ejs
+++ b/views/cardElem.ejs
@@ -1,30 +1,21 @@
 <% data.forEach(elem => { %>
                         
-    <div class="flex justify-start p-2 m-3 bg-white text-sm gap-2 rounded-md overflow-hidden shadow-md items-center">
-        <span class="mx-2 border-1 border-gray-600 rounded-lg overflow-hidden ">
-            <img src=<%=elem.gdacs_icon %> alt="">
+    <div class="p-2 m-3 bg-white text-sm rounded-lg overflow-hidden shadow-lg max-h-max relative">
+        <span class="block border-1 border-gray-600 rounded-lg overflow-hidden">
+            <img class="rounded-lg object-cover h-48 w-full md:h-56 sm:h-60" src=<%=elem.urlToImage %> alt="">
         </span>
-        <span class="">
-            <% var titleList = elem.title.split(" ") %>
-            <span class="block font-bold mt-2">
-                <% var mainTitle  %>
-                <% mainTitle = titleList[1].toUpperCase()+ " IN " + elem.gdacs_country.toUpperCase() %>
-                <% if (titleList[1] == "forest") mainTitle = titleList[1].toUpperCase()+ " FIRE IN " + elem.gdacs_country.toUpperCase() %>
-                <%= mainTitle %>
+        <div class="block content-between h-fit">
+            <span class="block font-bold mt-2 text-center text-lg">
+                <%=elem.title%>
             </span>
-            
-
-            <span class="block my-2">
-                <%let date_spiter_F = elem.gdacs_fromdate.split(" ")  %>
-                <%let date_spiter_T = elem.gdacs_todate.split(" ")  %>
-                <%let date = `On - ${date_spiter_F[0]} ${date_spiter_F[1]} ${date_spiter_F[2]}` %>
-                <% if (elem.gdacs_fromdate != elem.gdacs_todate) date = `From - ${date_spiter_F[0]} ${date_spiter_F[1]} ${date_spiter_F[2]} - To -  ${date_spiter_T[0]} ${date_spiter_T[1]} ${date_spiter_T[2]}`%>
-                <%=date %>
+            <span class="block my-2 text-center text-sm px-4">
+                <%=elem.description.slice(0,250)+".."%>
             </span>
-            <span class="block my-2 text-blue-600 hover:text-blue-400 ">
-                <% var summaryLink = elem.links[1].href %>
-                <a href= "<%= '/moreinfo?id=' + elem.id %>"> More Info</a>
-            </span>
+        </div>
+        <span class="block my-14 text-center text-sm px-4">
+        </span>
+        <span class="block my-2 mb-4 p-2 uppercase font-semibold text-md absolute bottom-0 left-[34%] rounded-lg cursor-pointer tracking-wider border-red-500 border-2 text-red-500 hover:bg-red-500 hover:text-white hover:shadow-inner transition ease-out duration-700">
+            <a href= "<%= '/moreinfo?url=' + elem.url %>"> Read Article</a>
         </span>
     </div>
 
