--- a/views/cardElem.ejs
+++ b/views/cardElem.ejs
@@ -1,22 +1,23 @@
 <% data.forEach(elem => { %>
-                        
-    <div class="p-2 m-3 bg-white text-sm rounded-lg overflow-hidden shadow-lg max-h-max relative">
-        <span class="block border-1 border-gray-600 rounded-lg overflow-hidden">
-            <img class="rounded-lg object-cover h-48 w-full md:h-56 sm:h-60" src=<%=elem.urlToImage %> alt="">
-        </span>
-        <div class="block content-between h-fit">
-            <span class="block font-bold mt-2 text-center text-lg">
-                <%=elem.title%>
+    <% if (elem.author!=null) {%>   
+        <div class="p-2 m-3 bg-white text-sm rounded-lg overflow-hidden shadow-lg max-h-max relative">
+            <span class="block border-1 border-gray-600 rounded-lg overflow-hidden">
+                <img class="rounded-lg object-cover h-48 w-full md:h-56 sm:h-60" src=<%=elem.urlToImage %> alt="">
             </span>
-            <span class="block my-2 text-center text-sm px-4">
-                <%=elem.description.slice(0,250)+".."%>
+            <div class="block content-between h-fit">
+                <span class="block font-bold mt-2 text-center text-lg">
+                    <%=elem.title%>
+                </span>
+                <span class="block my-2 text-center text-sm px-4">
+                    <%=elem.description.slice(0,250)+".."%>
+                </span>
+            </div>
+            <span class="block my-14 text-center text-sm px-4">
+            </span>
+            <span class="block my-2 mb-4 p-2 uppercase font-semibold text-md absolute bottom-0 left-[34%] btn">
+                <a href= "<%= '/moreinfo?url=' + elem.url %>"> Read Article</a>
             </span>
         </div>
-        <span class="block my-14 text-center text-sm px-4">
-        </span>
-        <span class="block my-2 mb-4 p-2 uppercase font-semibold text-md absolute bottom-0 left-[34%] rounded-lg cursor-pointer tracking-wider border-red-500 border-2 text-red-500 hover:bg-red-500 hover:text-white hover:shadow-inner transition ease-out duration-700">
-            <a href= "<%= '/moreinfo?url=' + elem.url %>"> Read Article</a>
-        </span>
-    </div>
+    <%} %>                  
 
 <% }); %>
