advance serch option buttons

--- a/views/cardElem.ejs
+++ b/views/cardElem.ejs
@@ -2,7 +2,7 @@
     <% if (elem.author!=null) {%>   
         <div class="p-2 m-3 bg-white text-sm rounded-lg overflow-hidden shadow-lg max-h-max relative">
             <span class="block border-1 border-gray-600 rounded-lg overflow-hidden">
-                <img class="rounded-lg object-cover h-48 w-full md:h-56 sm:h-60" src=<%=elem.urlToImage %> alt="">
+                <img class="rounded-lg object-cover h-48 w-full md:h-56 sm:h-60" src=<%=elem.urlToImage %> alt="No Image">
             </span>
             <div class="block content-between h-fit">
                 <span class="block font-bold mt-2 text-center text-lg">
